# rpn_calculator

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile
.github/workflows/: ci.yml
html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  rpn_8cpp.html  rpn_8cpp__incl.map  rpn_8cpp__incl.md5  rpn_8h.html  rpn_8h__dep__incl.map  rpn_8h__dep__incl.md5  rpn_8h__incl.map  rpn_8h_source.html
include/: rpn.h
latex/: main_8cpp.tex  main_8cpp__incl.md5  rpn_8cpp.tex  rpn_8cpp__incl.md5  rpn_8h.tex  rpn_8h__dep__incl.md5  rpn_8h__incl.md5  rpn_8h_source.tex
src/: main.cpp  rpn.cpp
test/: CMakeLists.txt  test_rpn.cpp
